--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "nth-check": "^2.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.11",
-    "web-vitals": "^3.3.2",
-    "nth-check": "^2.1.1"
+    "web-vitals": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false --detectOpenHandles",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install-backend": "cd backend && npm install",
+    "install-both": "npm install & npm run install-backend",
+    "backend": "cd backend && node index.js",
+    "start-both": "npm run backend & npm start"
   },
   "eslintConfig": {
     "extends": [
