--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^3.3.2"
   },
